# obsdian-markdown

./: .gitignore  README.md  main.py  pyproject.toml
src/obsidian_markdown/: __init__.py  ast.py  block_parser.py  obsidian_markdown.py  utils.py
tests/: conftest.py  example.md  test_block_identifer.py  test_callout_parser.py  test_code_block_parser.py  test_comment_block_parser.py  test_footnote_parser.py  test_front_matter_parser.py  test_horizontal_rule_parser.py  test_img_link_parser.py  test_list_block_parser.py  test_math_block_parser.py  test_paragraph_parser.py  test_quote_parser.py  test_section_parser.py  test_table_parser.py
