[project]
name = "obsidian-markdown"
version = "0.1.0"
description = "A Python package for parser the obsidian markdwon file and convert it to other markdown format."
readme = "README.md"
authors = [{ name = "Rong Zhiwei", email = "18845728185@163.com" }]
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.2"]

[project.scripts]
obsidian-markdown = "obsidian_markdown:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipdb>=0.13.13", "pytest>=8.3.4"]

[tool.pytest.ini_options]
addopts = "-s"
